fix(contact): reduce social size on mobile to add margin

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -54,7 +54,6 @@ section#contact {
       width: 60%;
     }
     li {
-      width: 5rem;
       @include socialBubble()
     }
   }
